[package]
name = "another-libunwind-rs"
version = "0.3.1"
authors = ["Yang Keao <yangkeao@chunibyo.icu>", "Andrey Fedotov <fedotoff@ispras.ru>"]
edition = "2018"
description = "High-level bindings for the libunwind library"
readme = "README.md"
keywords = [ "stackunwind", "backtrace","stacktrace","coredump"]
repository = "https://github.com/xcoldhandsx/libunwind-rs.git"
homepage = "https://github.com/xcoldhandsx/libunwind-rs.git"
license = "MIT"
exclude = ["/data"]

[features]
ptrace = ["another-libunwind-sys/ptrace"]

[dependencies]
libc = "0.2.66"
foreign-types = "0.5.0"
num-traits = "0.2"
num-derive = "0.3"
another-libunwind-sys = { git = "https://github.com/YangKeao/libunwind-sys.git" }
